Update Helm Chart (#157)
- Ensure the scaler works by adding new integration tests via Kind
    - Add a new example Azure Function App and Azurite helm chart
- Add new helm values to better configure the chart
- Update base image to use mariner

--- a/.github/workflows/scaler-pr.yml
+++ b/.github/workflows/scaler-pr.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Test
+      - name: Unit Tests
         uses: ./.github/actions/dotnet-test
         with:
           solution: Scaler
@@ -25,6 +25,12 @@ jobs:
         uses: ./.github/actions/code-coverage
         with:
           reportPath: ${{ runner.temp }}/TestResults/*/coverage.cobertura.xml
+
+      - name: Integration Tests
+        uses: ./.github/actions/integration-test
+        with:
+          buildConfiguration: Release
+          localTag: ${{ github.run_id }}
 
   publish:
     name: Publish
