--- a/.github/workflows/scaler-ci.yml
+++ b/.github/workflows/scaler-ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   validate:
-    name: validate
+    name: Validate
     runs-on: ubuntu-latest
 
     steps:
@@ -18,19 +18,26 @@ jobs:
       - name: Read Versions
         id: chart
         uses: ./.github/actions/parse-chart
+        with:
+          workflowRunId: ${{ github.run_id }}
 
       - name: Run Unit Tests
         uses: ./.github/actions/dotnet-test
         with:
-          assemblyVersion: ${{ steps.chart.outputs.imageTag }}
+          assemblyVersion: ${{ steps.chart.outputs.assemblyVersion }}
           buildConfiguration: Release
           fileVersion: ${{ steps.chart.outputs.assemblyFileVersion }}
           resultsDirectory: ${{ runner.temp }}/TestResults
 
+      - name: Upload Code Coverage
+        uses: ./.github/actions/code-coverage
+        with:
+          reportPath: ${{ runner.temp }}/TestResults/*/coverage.cobertura.xml
+
       - name: Build Docker Image
         uses: ./.github/actions/docker-build
         with:
-          assemblyVersion: ${{ steps.chart.outputs.imageTag }}
+          assemblyVersion: ${{ steps.chart.outputs.assemblyVersion }}
           buildConfiguration: Release
           fileVersion: ${{ steps.chart.outputs.assemblyFileVersion }}
           imageRepository: durabletask-azurestorage-scaler
@@ -42,8 +49,3 @@ jobs:
           buildConfiguration: Release
           imageTag: ${{ steps.chart.outputs.imageTag }}
           scalerImageRepository: durabletask-azurestorage-scaler
-
-      - name: Upload Code Coverage
-        uses: ./.github/actions/code-coverage
-        with:
-          reportPath: ${{ runner.temp }}/TestResults/*/coverage.cobertura.xml
