--- a/.github/workflows/scaler-ci.yml
+++ b/.github/workflows/scaler-ci.yml
@@ -1,10 +1,16 @@
 name: Scaler
 
 on:
-  push:
+  pull_request:
     branches: [ main ]
     paths-ignore:
       - '**.md'
+
+#on:
+#  push:
+#    branches: [ main ]
+#    paths-ignore:
+#      - '**.md'
 
 jobs:
   validate:
@@ -18,8 +24,6 @@ jobs:
       - name: Read Versions
         id: chart
         uses: ./.github/actions/parse-chart
-        with:
-          workflowRunId: ${{ github.run_id }}
 
       - name: Run Unit Tests
         uses: ./.github/actions/dotnet-test
@@ -55,7 +59,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: validate
     permissions:
-      contents: read
+      contents: write
       packages: write
 
     steps:
@@ -64,6 +68,10 @@ jobs:
         with:
           name: image
           path: ${{ runner.temp }}/image
+
+      - name: Read Versions
+        id: chart
+        uses: ./.github/actions/parse-chart
 
       - name: Push Docker Image
         id: push
