--- a/.github/actions/github-release/action.yml
+++ b/.github/actions/github-release/action.yml
@@ -31,7 +31,7 @@ runs:
               release: {
                 asset: '${{ inputs.asset }}',
                 name: '${{ inputs.name }}',
-                prerelease: ${{ inputs.prerelease }},
+                prerelease: '${{ inputs.prerelease }}'.toLowerCase() === 'true',
                 tag: '${{ inputs.tag }}',
                 version: '${{ inputs.version }}',
               }
