--- a/.github/workflows/scaler-ci.yml
+++ b/.github/workflows/scaler-ci.yml
@@ -1,16 +1,10 @@
 name: Scaler
 
 on:
-  pull_request:
+  push:
     branches: [ main ]
     paths-ignore:
       - '**.md'
-
-#on:
-#  push:
-#    branches: [ main ]
-#    paths-ignore:
-#      - '**.md'
 
 jobs:
   validate:
